--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jogeeks.storynumone"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.1-alpha" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
