--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 bin/
 tmp/
 gen/
-res/raw/
+res/raw/*
 *.tmp
 *.bak
 *.swp
@@ -59,6 +59,7 @@ build/
 *_i.c
 *_p.c
 *.ilk
+*.mp3
 *.meta
 *.obj
 *.pch
